corrected overflow issues in mobile

--- a/day-1-flexbox/4-flexbox-exercises/4c-footer/begin/css/style.css
+++ b/day-1-flexbox/4-flexbox-exercises/4c-footer/begin/css/style.css
@@ -73,8 +73,8 @@ figure {
 figure img {
     margin-bottom: -4px;
     width: 100%;
-    object-fit: cover;
-    object-position: 0 -150px;
+    /* object-fit: cover;
+    object-position: 0 -150px; */
 }
 
 figcaption {
